--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,55 @@
   width:272px; ; height:92px ;
   background-image: url("https://www.google.co.in/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png");
   position: absolute;
-  top: 220px;
-  left: 620px;
+  top: 205px;
+  left: 635px;
 }
 
 .button{
+  position: absolute;
+  top: 397px;
+  height: 38px;
+  justify-content: center;
+  border: 0 ;
+  background: #f2f2f2;
+  font-weight: bold;
+  color: #808080;
+}
 
+.button:hover{
+  border: 0.1px #b3b3b3 solid;
+  color: #4d4d4d;
+}
+
+.Search{
+  left: 640px;
+  width: 116px;
+
+}
+
+.Lucky{
+  right: 640px;
+  width: 130px;
 }
 
 .text_box{
   position: absolute;
-  top: 345px;
-  left: 485px;
-  width: 560px; height: 40px;
+  top: 322px;
+  left: 495px;
+  width: 555px; height: 44px;
+  box-shadow: 1px 3px #cccccc;
+  border: 1px #e6e6e6 solid;
+  padding: 3px 10px ;
+}
+
+.text_box:focus{
+  outline: 0;
+}
+
+.voice{
+  position: absolute;
+  height: 22px; width: 22px;
+  top: 335px;
+  right:  500px;
+  z-index: 5;
 }
