--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@
   position: absolute;
   top: 720px;
   border-top: 1px #e6e6e6 solid;
+  background: #f2f2f2;
   width: 99%;
 }
 
@@ -172,6 +173,7 @@
   position: absolute;
   top: 670px; width: 98%;
   border-top: 1px #e6e6e6 solid;
+  background: #f2f2f2;
 }
 
 .country{
